# glados-micro-wake-word

./: .gitignore  .gitmodules  README.md  mww.json  pyproject.toml  training_notebook.ipynb  training_parameters.yaml
models/: glados.json  glados.roc.txt  glados.tflite
